added Connect(serviceId) method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ add_library(idl STATIC ${IDL_SOURCES})
 add_library(pbus SHARED
 	src/lib/pbus/LocalBus.cpp
 	src/lib/pbus/LocalBusConnection.cpp
+	src/lib/pbus/Session.cpp
 )
 
 set_target_properties(pbus PROPERTIES VERSION 1.0)
