added test for clone and macroses

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,18 @@ cmake_minimum_required(VERSION 3.12)
 set (CMAKE_CXX_STANDARD 14)
 
 include(CheckCXXCompilerFlag)
+include(CheckSymbolExists)
+
+add_definitions(-D_GNU_SOURCE) #required for GNU extensions such clone
+set(CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE)
+
+CHECK_SYMBOL_EXISTS(clone sched.h HAVE_CLONE)
+CHECK_SYMBOL_EXISTS(CLONE_NEWNS sched.h HAVE_CLONE_NEWNS)
+CHECK_SYMBOL_EXISTS(CLONE_NEWUTS sched.h HAVE_CLONE_NEWUTS)
+CHECK_SYMBOL_EXISTS(CLONE_NEWIPC sched.h HAVE_CLONE_NEWIPC)
+CHECK_SYMBOL_EXISTS(CLONE_NEWUSER sched.h HAVE_CLONE_NEWUSER)
+CHECK_SYMBOL_EXISTS(CLONE_NEWPID sched.h HAVE_CLONE_NEWPID)
+CHECK_SYMBOL_EXISTS(CLONE_NEWNET sched.h HAVE_CLONE_NEWNET)
 
 CHECK_CXX_COMPILER_FLAG(-Wall COMPILER_SUPPORTS_CXX11)
 if (COMPILER_SUPPORTS_CXX11)
