add test for unshare()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_definitions(-D_GNU_SOURCE) #required for GNU extensions such clone
 set(CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE)
 
 CHECK_SYMBOL_EXISTS(clone sched.h HAVE_CLONE)
+CHECK_SYMBOL_EXISTS(unshare sched.h HAVE_UNSHARE)
 CHECK_SYMBOL_EXISTS(CLONE_NEWNS sched.h HAVE_CLONE_NEWNS)
 CHECK_SYMBOL_EXISTS(CLONE_NEWUTS sched.h HAVE_CLONE_NEWUTS)
 CHECK_SYMBOL_EXISTS(CLONE_NEWIPC sched.h HAVE_CLONE_NEWIPC)
