now interface is a minimal knowledge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,10 +44,20 @@ set(IDL_FILES
 
 IDL_GENERATE_SOURCE(
 	OUTPUT IDL_SOURCES
+	NAMES IDL_NAMES
 	IDLC_PATH ${IDLC_PATH}
 	DESTINATION ${IDL_DST}
 	INPUT ${IDL_FILES}
 )
+
+set(IDL_REGISTER_ALL_CODE "")
+set(IDL_REGISTER_ALL_INCLUDES "")
+foreach(_NAME ${IDL_NAMES})
+	set(IDL_REGISTER_ALL_CODE "${IDL_REGISTER_ALL_CODE}\n\tI${_NAME}::RegisterProxy(session);")
+	set(IDL_REGISTER_ALL_INCLUDES "${IDL_REGISTER_ALL_INCLUDES}\n#include <pbus/idl/I${_NAME}.h>")
+endforeach()
+configure_file(src/idl/RegisterAll.h.in ${IDL_DST}/RegisterAll.h)
+
 include_directories(
 	${CMAKE_CURRENT_SOURCE_DIR}/src/lib
 	${CMAKE_CURRENT_BINARY_DIR}/src/toolkit
@@ -56,6 +66,7 @@ include_directories(
 )
 
 add_library(pbus SHARED
+	src/lib/pbus/idl/ICoreObject.cpp
 	src/lib/pbus/LocalBus.cpp
 	src/lib/pbus/LocalBusConnection.cpp
 	src/lib/pbus/Session.cpp
