add PR_SET_NO_NEW_PRIVS check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ CHECK_SYMBOL_EXISTS(CLONE_NEWIPC sched.h HAVE_CLONE_NEWIPC)
 CHECK_SYMBOL_EXISTS(CLONE_NEWUSER sched.h HAVE_CLONE_NEWUSER)
 CHECK_SYMBOL_EXISTS(CLONE_NEWPID sched.h HAVE_CLONE_NEWPID)
 CHECK_SYMBOL_EXISTS(CLONE_NEWNET sched.h HAVE_CLONE_NEWNET)
+CHECK_SYMBOL_EXISTS(PR_SET_NO_NEW_PRIVS sys/prctl.h HAVE_PR_SET_NO_NEW_PRIVS)
 
 CHECK_CXX_COMPILER_FLAG(-Wall COMPILER_SUPPORTS_CXX11)
 if (COMPILER_SUPPORTS_CXX11)
